<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEECC"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".activity.MakeQuestionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="질문 하기"
        android:textSize="25dp"
        android:layout_gravity="center_horizontal"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50px"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_question_title"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/et_makeQuestion_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffffff"
                android:padding="10dp"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_question_content"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/et_makeQuestion_content"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:inputType="textMultiLine"
                android:background="#ffffffff"
                android:padding="10dp" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_qna_Question_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#6CD9DC"
        android:textColor="#FFF"
        android:text="@string/make_question_submit" />


</LinearLayout>
